# votron

./: .env.development.local.example  README.md  docker-compose.yaml  package-lock.json  package.json
contract/: Cargo.toml  contract.wasm
contract/src/: lib.rs  traits.rs
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Home.jsx  ProposalCard.jsx  Proposals.jsx  Settings.jsx  Status.jsx
frontend/src/hooks/: constants.js
src/: agentQueue.ts  index.ts  voter.ts  voting-utils.ts
src/routes/: debug.ts  vote.ts
